assets/styles.css
body{
    background-color: #33333D;
    color: white;
    font-family: 'Ubuntu Mono', monospace;
    padding-left: 250px;
    padding-right: 250px;

}

h1{
    margin-top: 10px;
    margin-bottom: 10px;
}

h2{
    font-size: 40px;
    margin-bottom: 10px;
}

h3{
    font-size: 25px;
    color: #00b8fc;
}

p{
    font-size: 17px;
    line-height: 25px;
    display: inline block;
}


.wrapper{
    flex-wrap: nowrap;
    display: flex;
}

.text{
    margin-left: 25%;
}



.header{
    text-align: center;
    font-size: 40px;
}

.navigation{
    font-size: 20px;
    padding-bottom: 15px;
}

.emphasis{
    text-decoration: underline;
}

a {
    color: inherit;
    text-decoration: none;
    
}

.left{
    margin-right: 50px;
}

.large-link{
    color: #00b8fc;
    font-size: 25px;
    text-decoration: none;
}

.left .large-link{
    left: auto;
    right: auto;
    padding-left: 25%;

}

.footer{
    margin-top: 25px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    
}

.social-media-button{
    padding: 25px;
    margin-left: 25px;
}

@media screen and (min-width: 1300px){
    body{
        padding-left: 250px;
        padding-right: 250px;

    }
}

@media screen and (max-width: 1200px){
    body{
        padding-left: 100px;
        padding-right: 100px;

    }
}

@media screen and (max-width: 950px){
    body{
        flex-wrap: nowrap;
        width: 100%;
        padding-left: 10%;
        padding-right: 10%;
       

    }

    .wrapper{
      display: inline-block;
      padding-right: auto;


    }
    .left{
        margin-right: 0px;
    }

    img{
       width: 100%;
    }
    .header{
        size: 100%;
    }

    
}

